<resources>
    <string name="app_name">FitCare</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_product_name">Nazwa</string>
    <string name="hint_name_dialog">Wpisz nazwę</string>
    <string name="hint_category_dialog">Wpisz kategorię</string>
    <string name="hint_calories_dialog">Wpisz kalorie</string>
    <string name="hint_protein_dialog">Wpisz białka</string>
    <string name="hint_carbs_dialog">Wpisz węglowodany</string>
    <string name="hint_fat_dialog">Wpisz tłuszcze</string>
    <string name="button_add_dialog">Dodaj</string>
    <string name="button_cancel_dialog">Anuluj</string>
    <string name="dialog_category">Kategoria</string>
    <string name="dialog_calories">Suma kalorii na 100g</string>
    <string name="dialog_protein">Suma białek na 100g</string>
    <string name="dialog_carbs">Suma węglowodanów na 100g</string>
    <string name="dialog_fat">Suma tłuszczy na 100g</string>
    <string name="product_list_row_category">Kategoria</string>
    <string name="product_list_row_name">Nazwa</string>
    <string name="product_list_row_protein">Białko:</string>
    <string name="product_list_row_fat">Tłuszcze:</string>
    <string name="product_list_row_carbs">Węglowodany:</string>
    <string name="default_numeric_grams_value">0,00g</string>
    <string name="default_numeric_calories_value">0 kcal</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="button_make_tansaction">Zrealizuj</string>
    <string name="button_clear_shoppingCart">Wyczyść koszyk</string>
    <string name="text_calories">Kalorie:</string>
    <string name="default_calories_number">0</string>
    <string name="default_quantity_value">0g</string>
    <string name="text_number_weight_dialog">Podaj liczbę gramów produktu:</string>
    <string name="number_weight_dialog_hint">0g</string>
    <string name="weight_number_dialog_confirm">Ok</string>
    <string name="weight_numbe_dialog_cancel">Anuluj</string>
    <string name="product_activity_label">Wybierz produkty</string>
    <string name="shopping_cart_activity_label">Wybrane produkty</string>
    <string name="option_menu_shopping_cart">Koszyk</string>
    <string name="meal_transaction_name_text">Nazwa jadłospisu</string>
    <string name="meal_transaction_edit_text_hint">wpisz własną nazwę</string>
    <string name="transaction_dialog_button_add">Zrealizuj</string>
    <string name="transaction_btn_dialog_cancel">Anuluj</string>
    <string name="title_activity_transaction_list">TransactionListActivity</string>
    <string name="transaction_list_made">Utworzone jadłospisy</string>
    <string name="product_list_menu_item">Lista produktów</string>
    <string name="title_activity_transaction_list_detail">TransactionListDetailActivity</string>
    <string name="meals_set_created_activity">Utworzone jadłospisy</string>
    <string name="meals_details_activity">Szczegóły jadłospisu</string>
    <string name="empty_shopping_cart_text">Ta lista jest pusta, dodaj produkty</string>
    <string name="preference_bmr_title">Włącz/Wyłącz manualne uzupełnianie</string>
    <string name="preference_bmr_summary">Włącz jeśli chcesz samodzielnie uzupełnić liczbę spożywanych dziennie kalorii</string>
    <string name="preference_manual_title">Manualne uzupełnienie kalorii</string>
    <string name="preference_manual_sub_title">Manualny limit kcal</string>
    <string name="preference_manual_summary">Wprowadź liczbę kalorii do spożycia</string>
    <string name="preference_manual_hint">0 kalorii</string>
    <string name="preference_category_title">Algorytm Harrisa-Benedicta</string>
    <string name="preference_height_title">Wzrost</string>
    <string name="preference_height_summary">Podaj wzrost w cm</string>
    <string name="preference_height_hint">0 cm</string>
    <string name="preference_weight_title">Waga</string>
    <string name="preference_weight_summary">Podaj wagę w kilogramach</string>
    <string name="preference_weight_hint">0.0 kg</string>
    <string name="preference_sex_summary">Podaj płeć</string>
    <string name="preference_sex_title">Płeć</string>
    <string name="preference_sex_dialog_title">Wybierz płeć</string>
    <string name="preference_age_title">Wiek</string>
    <string name="preference_age_summary">Podaj wiek</string>
    <string name="preference_age_hint">wiek</string>
    <string name="preference_activity_level_title">Poziom aktywności fizycznej</string>
    <string name="preference_activity_level_summary">Określ poziom swojej aktywności fizycznej</string>
    <string name="preference_activity_level_dialog_title">Wybierz odpowiednią opcję</string>
    <string name="preference_diet_goal_title">Cel diety</string>
    <string name="preference_diet_goal_summary">Określ cel prowadzenia diety</string>
    <string name="preference_diet_goal_dialog_title">Wybierz odpowiednią opcję</string>
    <string name="diet_action_option_menu">Ustawienia diety</string>
    <string name="default_numeric_grams_value_no_g">0,00</string>
    <string name="calories_with_slash">/0kcal</string>
    <string name="default_grams_with_slash">/0,00g</string>
    <string name="default_percent_value">0,00%</string>
    <string name="transaction_list_empty_text">Brak jadłospisów, utwórz nowy</string>
    <string-array name="sex_entries">
        <item>Mężczyzna</item>
        <item>Kobieta</item>
    </string-array>
    <string-array name="sex_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="activity_level_entries">
        <item>Brak</item>
        <item>Niska</item>
        <item>Umiarkowana</item>
        <item>Wysoka</item>
    </string-array>
    <string-array name="activity_level_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="diet_goals_entries">
        <item>Redukcja wagi</item>
        <item>Utrzymanie wagi</item>
        <item>Zwiększenie wagi</item>
    </string-array>
    <string-array name="diet_goals_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_weight_journal">WeightJournalActivity</string>
    <string name="actual_weight_journal">Wpisz aktualną wagę</string>
    <string name="weight_journal_hint">0,00 kg</string>
    <string name="weight_journal_option_menu">Dziennik wagi</string>
    <string name="weight_journal_label">Dziennik wagi</string>
</resources>
