<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:text="@string/meal_transaction_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meal_plan_text"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/colorSecondaryText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/edit_meal_name"
        android:hint="@string/meal_transaction_edit_text_hint"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:text="@string/transaction_dialog_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_create_transaction"
            android:layout_weight="1" />

        <Button
            android:text="@string/transaction_btn_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel_transaction"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>