<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/product_list_row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shopping_product_name"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/default_quantity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shopping_product_quantity"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/shopping_product_name"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/product_list_row_protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sh_text_protein"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/shopping_product_name"
        android:textSize="12sp" />

    <TextView
        android:text="@string/product_list_row_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sh_text_fat"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/sh_text_protein"
        android:textSize="12sp" />

    <TextView
        android:text="@string/product_list_row_carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sh_text_carbs"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/sh_text_fat"
        android:textSize="12sp" />

    <TextView
        android:text="@string/default_numeric_grams_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sh_value_protein"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/shopping_product_name"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/sh_text_protein"
        android:textSize="12sp" />

    <TextView
        android:text="@string/default_numeric_grams_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sh_value_fat"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/sh_text_fat"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/sh_value_protein"
        android:textSize="12sp" />

    <TextView
        android:text="@string/default_numeric_grams_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sh_value_carbs"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/sh_text_carbs"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/sh_value_fat"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:text="@string/default_numeric_calories_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sh_value_calories"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />
</android.support.constraint.ConstraintLayout>