<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/product_list_row_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/product_category"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:text="@string/product_list_row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/product_name"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/product_category"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorSecondaryText"
        android:layout_marginStart="16dp" />

    <TextView
        android:text="@string/product_list_row_protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/template_protein"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        android:textSize="12sp"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:text="@string/product_list_row_fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/template_fat"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/template_protein"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="12sp"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:text="@string/product_list_row_carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/template_carbs"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/template_fat"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:text="@string/default_numeric_grams_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/value_protein"
        android:textSize="12sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/template_protein"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:text="@string/default_numeric_grams_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/value_fat"
        android:textSize="12sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/template_fat"
        app:layout_constraintTop_toBottomOf="@+id/value_protein"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:text="@string/default_numeric_grams_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/value_carbs"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/template_carbs"
        android:textSize="12sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/value_fat"
        app:layout_constraintVertical_bias="0.75"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:text="@string/default_numeric_calories_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/value_calories"
        android:textSize="30sp"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:textColor="@color/colorAccent" />

</android.support.constraint.ConstraintLayout>